@@ -1,3 +1,4 @@
+ - Change Mesh::vertices() --> Mesh::coordinates()
  - Fix bug in output of mesh to MATLAB format
  - Add plasticty module (experimental)
  - Fix configure test for Python dev (patch from Åsmund Ødegård)
